hphp/hack/test/typecheck/deprecated_fun_id.php.exp
File "deprecated_fun_id.php", line 7, characters 13-22:
Invalid argument (Typing[4040])
File "deprecated_fun_id.php", line 4, characters 10-12:
Too few arguments
File "stdlib/builtins_array.hhi", line 118, characters 20-28:
Because of this definition
File "deprecated_fun_id.php", line 7, characters 17-21:
The function foo is deprecated: use bar() instead (Typing[4128])
File "deprecated_fun_id.php", line 4, characters 10-12:
Definition is here
